==> VLa1111/forsest_detection/Add/Src/me3616.c <==
#include "string.h"
#include "stdio.h"
#include "stdlib.h"
#include "me3616.h"
#include "main.h"
#include "usart.h"
#include "tim.h"
#define ME3616_WAKE_UP_HIGH	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3, GPIO_PIN_SET)
#define ME3616_WAKE_UP_LOW	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3, GPIO_PIN_RESET)
#define ME3616_MIPLNOTIFY_TIME	3000

void me3616_power_on(void)
{
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3, GPIO_PIN_SET);	/* 拉高power引脚开机 */
	HAL_Delay(1000);
    HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3, GPIO_PIN_RESET);	/* 释放power引脚 */
}

void me3616_hardware_reset(void)
{
    HAL_GPIO_WritePin(GPIOC, GPIO_PIN_4,GPIO_PIN_SET);	/* 拉高RESET引脚开始复位 */
	HAL_Delay(1000);
    HAL_GPIO_WritePin(GPIOC, GPIO_PIN_4,GPIO_PIN_RESET);	/* 释放RESET引脚 */
}

void me3616_at_response(u8 mode)
{
    u8 tmpRecv[64] = {0};
    u16 revLen = 0 ;
    if(__HAL_UART_GET_FLAG(&USART2_Handler, UART_IT_TC)) /* 接收到一次数据了 */
    {
        memset(tmpRecv,0,sizeof(tmpRecv));
        revLen = UART2Recv(tmpRecv,sizeof(tmpRecv));
        printf("%s\r\n",tmpRecv);
    }
}

void me3616_process_back_result_task(void *parameter)
{
		if(__HAL_UART_GET_FLAG(&USART2_Handler,UART_IT_TC))
		{
			if(strstr((const char*)USART2_RX_BUF, "+MIPLEVENT") && (0 == g_me3616_miplnotify_flag))
			{
				if(strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 25") || strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 8")  \
				|| strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 7") || strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 5")   \
				|| strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 9") || strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 10")  \
				|| strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 12") || strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 13") \
				|| strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 20") || strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 3"))
				{
					me3616_at_response(1);

					g_hardware_times = 0;
//					TIM_Cmd(TIM3, DISABLE);  /* 关闭TIMx */
                    HAL_TIM_Base_Stop_IT(&htim21);
					me3616_hardware_reset();	/* 执行硬件复位重启 */
				}
				else if(strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 14"))
				{
					me3616_onenet_miplupdate(g_opend_lifetime, 1);
				}
				me3616_at_response(1);
			}
			#ifdef ME3616_OPEN_SLEEP_MODE
			else if(strstr((const char*)USART2_RX_BUF, "+MIPLEVENT: 0, 4") && (1 == g_me3616_miplnotify_flag))
			{
				me3616_onenet_miplnotify_process();
			}
			#else
			else if(1 == g_me3616_miplnotify_flag)
			{
				me3616_onenet_miplnotify_process();
			}
			#endif
			else if(strstr((const char*)USART2_RX_BUF, "+MIPLOBSERVE"))
			{
				me3616_parse_onenet_miplobserve(&g_observe_msgid, &g_observe_flag, &g_observe_objectid, &g_observe_instanceid, &g_observe_resourceid);
				me3616_at_response(1);
                HAL_Delay(300);
				me3616_onenet_miplobserve_rsp(g_observe_msgid, 1);
			}
			else if(strstr((const char*)USART2_RX_BUF, "+MIPLDISCOVER"))
			{
				me3616_parse_onenet_mipldiscover(&g_discover_msgid, &g_discover_objectid);
				me3616_at_response(1);
                HAL_Delay(300);
				me3616_onenet_mipldiscover_rsp(g_discover_msgid, 1, 9, g_discover_valuestring);
				me3616_at_response(1);
                HAL_Delay(300);

				me3616_onenet_miplnotify_process();
			}
			else if(strstr((const char*)USART2_RX_BUF, "+CIS ERROR"))
			{
				me3616_at_response(1);
				g_hardware_times = 0;
//				TIM_Cmd(TIM3, DISABLE);  	/* 关闭TIMx */
                HAL_TIM_Base_Stop_IT(&htim21);
				me3616_hardware_reset();	/* 执行硬件复位重启 */
			}
			else if(strstr((const char*)USART2_RX_BUF, "auto-reboot"))/* 模组发生异常重启现象 */
			{
				me3616_at_response(1);
				g_hardware_times = 0;
//				TIM_Cmd(TIM3, DISABLE);  /* 关闭TIMx */
                HAL_TIM_Base_Stop_IT(&htim21);
			}
			else if(strstr((const char*)USART2_RX_BUF, "+IP"))	/* 查到IP，说明模组开机或者重启后注册上网络了 */
			{
				me3616_at_response(1);
				printf("me3616 network registed...\r\n");
				me3616_registered_to_onenet();
			}
			else
			{
				me3616_at_response(1);
			}
		}
}
