==> sanjaywu/OneNET_ME3616_DEMO/OneNET_ME3616_DEMO/HARDWARE/me3616/me3616.c <==
#include "string.h"
#include "stdarg.h"
#include "stdio.h"
#include "stdlib.h"
#include "me3616.h"
#include "usart1.h"
#include "usart3.h"
#include "delay.h"
#include "utils.h"
#include "malloc.h"
#include "FreeRTOS.h"
#include "task.h"
#include "sys.h"
#include "timers.h"
#include "sht20.h"
#define ME3616_MALLOC(size)	pvPortMalloc(size)
#define ME3616_FREE(p)	vPortFree(p)
#define ME3616_MALLOC(size)	mymalloc(SRAMIN, size)
#define ME3616_FREE(p)	myfree(SRAMIN, p)

void me3616_power_on(void)
{
	GPIO_SetBits(GPIOC, GPIO_Pin_4);	/* 拉高power引脚开机 */
	delay_ms(1000);		
	GPIO_ResetBits(GPIOC, GPIO_Pin_4);	/* 释放power引脚 */
}

void me3616_hardware_reset(void)
{
	GPIO_SetBits(GPIOC, GPIO_Pin_5);	/* 拉高RESET引脚开始复位 */
	delay_ms(1000);		
	GPIO_ResetBits(GPIOC, GPIO_Pin_5);	/* 释放RESET引脚 */
}

void me3616_at_response(u8 mode)
{
	if(USART3_RX_STA & 0X8000) /* 接收到一次数据了 */
	{ 
		USART3_RX_BUF[USART3_RX_STA&0X7FFF]	= 0;	/* 添加结束符 */
		printf("%s\r\n", USART3_RX_BUF);		/* 发送到串口 */
		if(mode)
		{
			USART3_RX_STA = 0;
		}
	} 
}

void me3616_process_back_result_task(void *parameter)
{
	
	while(1)
	{
		if(USART3_RX_STA & 0X8000)
		{
			if(strstr((const char*)USART3_RX_BUF, "+MIPLEVENT"))
			{
				me3616_at_response(1);
			}
			else if(strstr((const char*)USART3_RX_BUF, "+MIPLOBSERVE"))
			{
				me3616_parse_onenet_miplobserve(&g_observe_msgid, &g_observe_flag, &g_observe_objectid, &g_observe_instanceid, &g_observe_resourceid);
				me3616_at_response(1);
				delay_ms(100);
				me3616_onenet_miplobserve_rsp(g_observe_msgid, 1);
			}
			else if(strstr((const char*)USART3_RX_BUF, "+MIPLDISCOVER"))
			{
				me3616_parse_onenet_mipldiscover(&g_discover_msgid, &g_discover_objectid);
				me3616_at_response(1);
				delay_ms(100);
				me3616_onenet_mipldiscover_rsp(g_discover_msgid, 1, 9, "\"5700;5701\"");
				me3616_at_response(1);
				delay_ms(500);
				
				if(pdPASS == xTimerStart(g_me3616_miplnotify_sw_timer_handle, 0))
				{
					printf("start sw timer\r\n");
				}
			}
			else if(strstr((const char*)USART3_RX_BUF, "+CIS ERROR"))
			{
				if(pdPASS == xTimerStop(g_me3616_miplnotify_sw_timer_handle, 0))
				{
					printf("stop sw timer\r\n");
				}
				me3616_hardware_reset();	/* 执行硬件复位重启 */
			}
			else if(strstr((const char*)USART3_RX_BUF, "auto-reboot"))/* 模组发生异常重启现象 */
			{
				if(pdPASS == xTimerStop(g_me3616_miplnotify_sw_timer_handle, 0))	/* 关闭软件定时器 */
				{
					printf("stop sw timer\r\n");
				}
			//	me3616_hardware_reset();	/* 执行硬件复位重启 */

			}
			else if(strstr((const char*)USART3_RX_BUF, "+IP"))	/* 查到IP，说明模组开机或者重启后注册上网络了 */
			{
				printf("me3616 network registed...\r\n");
				me3616_registered_to_onenet();
				me3616_at_response(1);
			}
			else
			{
				me3616_at_response(1);
			}
		}
	}
}
